git-annex (3.20110703) UNRELEASED; urgency=low

  * uninit: Delete the git-annex branch and .git/annex/
  * unannex: In --fast mode, file content is left in the annex, and a
    hard link made to it.

 -- Joey Hess <joeyh@debian.org>  Mon, 04 Jul 2011 15:50:21 -0400

git-annex (3.20110702) unstable; urgency=low

  * Now the web can be used as a special remote. 
    This feature replaces the old URL backend.
  * addurl: New command to download an url and store it in the annex.
  * Sped back up fsck, copy --from, and other commands that often
    have to read a lot of information from the git-annex branch. Such
    commands are now faster than they were before introduction of the
    git-annex branch.
  * Always ensure git-annex branch exists.
  * Modify location log parser to allow future expansion.
  * --force will cause add, etc, to operate on ignored files.
  * Avoid mangling encoding when storing the description of repository
    and other content.
  * cabal can now be used to build git-annex. This is substantially
    slower than using make, does not build or install documentation,
    does not run the test suite, and is not particularly recommended,
    but could be useful to some.

 -- Joey Hess <joeyh@debian.org>  Sat, 02 Jul 2011 15:00:18 -0400

git-annex (3.20110624) experimental; urgency=low

  * New repository format, annex.version=3. Use `git annex upgrade` to migrate.
  * git-annex now stores its logs in a git-annex branch.
  * merge: New subcommand. Auto-merges the new git-annex branch.
  * Improved handling of bare git repos with annexes. Many more commands will
    work in them.
  * git-annex is now more robust; it will never leave state files
    uncommitted when some other git process comes along and locks the index
    at an inconvenient time.
  * rsync is now used when copying files from repos on other filesystems.
    cp is still used when copying file from repos on the same filesystem,